<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_sms_storage_title"
                      android:key="pref_key_storage_settings">
<!--
    <Preference android:key="pref_key_mms_clear_history"
                      android:title="@string/pref_mms_clear_search_history_title"
                      android:summary="@string/pref_mms_clear_search_history_summary" />
-->
     <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_auto_delete"
                      android:summary="@string/pref_summary_auto_delete"
                      android:title="@string/pref_title_auto_delete" />
    <Preference android:key="pref_key_sms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_sms_delete" />
    <Preference android:key="pref_key_mms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_mms_delete" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_settings_title"
                      android:key="pref_key_sms_settings" >
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_sms_delivery_reports"
                      android:summary="@string/pref_summary_sms_delivery_reports"
                      android:title="@string/pref_title_sms_delivery_reports" />
    <Preference android:key="pref_key_manage_sim_messages"
                      android:summary="@string/pref_summary_manage_sim_messages"
                      android:title="@string/pref_title_manage_sim_messages" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_mms_settings_title"
                      android:key="pref_key_mms_settings">
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_delivery_reports"
                      android:summary="@string/pref_summary_mms_delivery_reports"
                      android:title="@string/pref_title_mms_delivery_reports" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_read_reports"
                      android:summary="@string/pref_summary_mms_read_reports"
                      android:title="@string/pref_title_mms_read_reports" />
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_mms_auto_retrieval"
                      android:title="@string/pref_title_mms_auto_retrieval"
                      android:summary="@string/pref_summary_mms_auto_retrieval" />
    <CheckBoxPreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_mms_auto_retrieval"
                        android:defaultValue="false"
                        android:key="pref_key_mms_retrieval_during_roaming"
                        android:title="@string/pref_title_mms_retrieval_during_roaming"
                        android:summary="@string/pref_summary_mms_retrieval_during_roaming" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_notification_settings_title">
    <CheckBoxPreference android:key="pref_key_enable_notifications"
                        android:title="@string/pref_title_notification_enabled"
                        android:summary="@string/pref_summary_notification_enabled"
                        android:defaultValue="true" />
    <RingtonePreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_ringtone"
                        android:title="@string/pref_title_notification_ringtone"
                        android:ringtoneType="notification"
                        android:defaultValue="content://settings/system/notification_sound" />
    <ListPreference     android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_vibrateWhen"
                        android:defaultValue="@string/prefDefault_vibrateWhen"
                        android:title="@string/pref_title_notification_vibrateWhen"
                        android:summary="@string/pref_summary_notification_vibrateWhen"
                        android:entries="@array/prefEntries_vibrateWhen"
                        android:entryValues="@array/prefValues_vibrateWhen"
                        android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
  </PreferenceCategory>
</PreferenceScreen>
