<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright (C) 2006-2008 Esmertec AG.
 * Copyright (C) 2006-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<com.android.mms.ui.AudioAttachmentView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_attachment_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingRight="5dip"
    android:background="@drawable/attachment_editor_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:src="@drawable/ic_attach_capture_audio_holo_light" />

        <TextView
            android:id="@+id/audio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/audio_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/text_color_red"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/play_audio_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:textColor="@android:color/black"
            android:text="@string/play" />

        <Button
            android:id="@+id/replace_audio_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:textColor="@android:color/black"
            android:text="@string/replace" />

        <Button
            android:id="@+id/remove_audio_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:textColor="@android:color/black"
            android:text="@string/remove" />

    </LinearLayout>
</com.android.mms.ui.AudioAttachmentView>
