<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recipients_subject_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:visibility="gone">

        <ViewStub android:id="@+id/recipients_editor_stub"
            android:layout="@layout/recipients_editor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        />

        <EditText android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:autoText="true"
            android:singleLine="true"
            android:hint="@string/subject_hint"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/white_background"
        android:gravity="bottom">

        <view class="com.android.mms.ui.MessageListView"
            android:id="@+id/history"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:listSelector="@drawable/chat_history_selector"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:drawSelectorOnTop="true"
            android:transcriptMode="alwaysScroll"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:stackFromBottom="true"
            android:visibility="gone"
            android:fadingEdge="none"
            android:layout_marginBottom="1dip"
            android:cacheColorHint="@android:color/white"
        />
    
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/attachment_editor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ViewStub android:id="@+id/image_attachment_view_stub"
                        android:layout="@layout/image_attachment_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
    
                    <ViewStub android:id="@+id/video_attachment_view_stub"
                        android:layout="@layout/video_attachment_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
  
                    <ViewStub android:id="@+id/audio_attachment_view_stub"
                        android:layout="@layout/audio_attachment_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
  
                    <ViewStub android:id="@+id/slideshow_attachment_view_stub"
                        android:layout="@layout/slideshow_attachment_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
  
                <LinearLayout
                    android:id="@+id/bottom_panel"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:background="@drawable/bottombar_landscape_565">

                    <RelativeLayout
                        android:id="@+id/editor_with_counter"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:addStatesFromChildren="true"
                        android:background="@android:drawable/edit_text">

                        <EditText
                            android:id="@+id/embedded_text_editor"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:autoText="true"
                            android:capitalize="sentences"
                            android:nextFocusRight="@+id/send_button"
                            android:hint="@string/type_to_compose_text_enter_to_send"
                            android:maxLines="4"
                            android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
                            android:imeOptions="actionSend|flagNoEnterAction"
                            android:background="@null"
                            android:maxLength="1000"
                        />
    
                        <TextView
                            android:id="@+id/text_counter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#88000000"
                            android:textColor="#ffffffff"
                            android:textSize="11sp"
                            android:textStyle="bold"
                            android:paddingLeft="3dip"
                            android:paddingRight="3dip"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:visibility="gone"
                        />
                    </RelativeLayout>

                    <Button android:id="@+id/send_button"
                        android:layout_marginLeft="5dip"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        style="?android:attr/buttonStyle"
                        android:layout_gravity="center_vertical"
                        android:nextFocusLeft="@+id/embedded_text_editor"
                        android:text="@string/send"
                    />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
